Bug 238632 - JJ: Mail not sent with selected encoding
Summary: JJ: Mail not sent with selected encoding
Status: VERIFIED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: akonadi-ports-regression
Depends on:
Blocks:
 
Reported: 2010-05-24 00:40 UTC by Sabine Faure
Modified: 2010-06-23 21:57 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2010-05-24 00:40:44 UTC
Version:           unspecified (using Devel) 
OS:                Linux

The user selects an encoding for sending an email but a dialogue warn him that another encoding will be used instead.
So the mail is not properly readable for the recipient.

Reproducible: Always

Steps to Reproduce:
- Launch Kmail
- Click on 'New'
- Fill in the recipient (yourself), the subject and enter a few letters using accents in the text editor (ex: ùçàèèèèééééâîùù)
- Click on 'send'
- Select the mail in your sent-mail folder
- Go to View menu/Set Encoding and select Chinese traditional (Big 5)
- Select the Chinese characters and copy them into a new email
- Enter a recipient (yourself) and a subject
- Go to Options menu/Encoding and select Chinese traditional (Big 5)
- Click on 'Send'

Actual Results:  
A warning message appears saying:'Encoding the message with ISO-8859-1 will lose some characters. Do you want to continue?'

You have to click 'Lose Characters' to send the email so when it arrives the Chinese characters are replaced by ?s.

Trunk, Svn Rev 1129830


Expected Results:  
The selected encoding should be remembered.
The email should contain the Chinese characters.
Comment 1 Thomas McGuire 2010-05-24 21:31:27 UTC
Indeed, KMail seems to ignore the encoding selection here.
Comment 2 Leo Franchi 2010-06-02 15:17:12 UTC
I can't reproduce this, after pasting the chinese characters into the new message, and selecting Big5 as the encoding, the mail sends fine. generated mail has Big5 encoding and is decoded properly
Comment 3 Leo Franchi 2010-06-03 16:37:23 UTC
SVN commit 1134159 by lfranchi:

Properly set the right charset. If the user selects a charset, use that one first. If Force Charset is on, use that as a fallback if the user hasn't explicitly chosen another one.

BUG: 238632


 M  +3 -3      kmcomposewin.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1134159
Comment 4 Sabine Faure 2010-06-23 21:57:41 UTC
It is corrected now.

The selected encoding works when sending emails now.

Note: in an email containing two types of encoding (ex: Chinese characters and Swedish characters like ä, not both of them can be visible. The user has to choose which one are the most important. The less important one ends up being replaced by a '?' after a warning message appears: 'Encoding the message with EncodingSelected will lose some characters. Do you want to continue?'

Trunk, Svn Rev 1141839