Properly set the right charset. If the user selects a charset, use that one first. If Force Charset is on, use that as a fallback if the user hasn't explicitly chosen another one.

BUG: 238632

svn path=/trunk/KDE/kdepim/kmail/; revision=1134159